--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,12 @@ repos:
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==19.10b0]
+#-   repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v0.780
+#    hooks:
+#    -   id: mypy
+#        args: []
+#        files: ^(pytest_html/)
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.1.0
     hooks:
