--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,16 @@
 [bdist_wheel]
 universal = 1
+
+[mypy]
+check_untyped_defs = True
+disallow_any_generics = True
+disallow_untyped_defs = True
+ignore_missing_imports = True
+no_implicit_optional = True
+no_implicit_reexport = True
+show_error_codes = True
+strict_equality = True
+warn_redundant_casts = True
+warn_return_any = True
+warn_unreachable = True
+warn_unused_configs = True
